# fef-rs

./: .gitignore  Cargo.toml  README.md
doc/: common.md  crate.md  v0.md
src/: config.rs  expr.rs  lib.rs  raw.rs  traits.rs  version.rs
src/common/: mod.rs  stream_utils.rs  traits.rs  version.rs
src/raw/: bytes.rs  error.rs  integer.rs  mod.rs  variable_length_enum.rs
src/v0/: _expr.rs  config.rs  expr.rs  mod.rs  traits.rs
src/v0/config/: configurations.rs  default.rs  error.rs  mod.rs  overridable_config.rs  read_configuration.rs  traits.rs
src/v0/expr/: error.rs  expr.rs  mod.rs  read_from.rs  traits.rs  write_to.rs
src/v0/expr/exprs/: bool_literals.rs  float_literal.rs  int_literal.rs  mod.rs  variable.rs
src/v0/expr/exprs/ops/: addition.rs  cube.rs  cube_root.rs  division.rs  int_division.rs  int_root.rs  mod.rs  modulo.rs  multiplication.rs  negation.rs  power.rs  reciprocal.rs  root.rs  square.rs  square_root.rs  subtraction.rs
src/v0/file/: error.rs  mod.rs  raw_formula.rs  read_from.rs  single_formula.rs
src/v0/metadata/: error.rs  header.rs  mod.rs  record.rs  traits.rs
src/v0/metadata/records/: mod.rs  name.rs  unknown.rs  variable_name.rs
src/v0/parse/: configuration.rs  expression.rs  file.rs  metadata.rs  mod.rs
src/v0/raw/: error.rs  float.rs  integer.rs  mod.rs  string.rs  variable_length_enum.rs
src/v0/read/: configuration.rs  expression.rs  file.rs  metadata.rs  mod.rs
src/v0/tokens/: config.rs  error.rs  expr.rs  file.rs  metadata.rs  mod.rs
src/v0/write/: configuration.rs  expression.rs  file.rs  metadata.rs  mod.rs
(+4 files in other folders)
