[package]
name = "fef"
authors = ["Jiří Cihelka"]
description = "Rust implementation of a parser of the FEF format"
repository = "https://github.com/jiricekcz/fef-rs"
license = "MIT OR Apache-2.0"
keywords = ["fef"]
categories = ["parser-implementations", "mathematics"]
version = "0.0.1"
edition = "2021"

[dependencies]

[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
